--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "react": "^16.8.0-alpha.1"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^1.0.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "jest": "^23.6.0",
+    "jest-enzyme": "^7.0.1",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
