--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@types/jest": "^23.3.12",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.20",
+    "@types/react-dom": "^16.0.11",
+    "@types/storybook__react": "^4.0.0",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.0",
     "enzyme": "^3.8.0",
