--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@storybook/react": "^4.1.6",
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.12",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
